# vgg_contrib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test.cc
argparse/: CMakeLists.txt
bezier/: CMakeLists.txt
boost/: CMakeLists.txt  README.md
flexbox/: CMakeLists.txt  README.md
flexbox/src/: change.h
flexbox/test/: layout_test.cpp
glm/: CMakeLists.txt
json/: CMakeLists.txt
json-schema-validator/: CMakeLists.txt
json-schema-validator/patches/: 00-patch.applied
json-schema-validator/upstream/: CMakeLists.txt
libjpeg-turbo/: CMakeLists.txt
libjpeg-turbo/patches/: 00-patch.applied  01-patch.applied
libjpeg-turbo/upstream/: CMakeLists.txt
libjpeg-turbo/upstream/sharedlib/: CMakeLists.txt
libpng/: CMakeLists.txt
libwebp/: CMakeLists.txt
minifb/: CMakeLists.txt
minifb/patches/: 00-patch.applied
minifb/upstream/: CMakeLists.txt
minifb/upstream/src/web/: WebMiniFB.c
nanobind/: CMakeLists.txt
patches/: 00-close-test.applied
picosha2/: CMakeLists.txt
quickjs/: CMakeLists.txt
quickjs/patches/: cutils.c.patch  cutils.h.patch  libbf.h.patch  qjs.c.patch  qjsc.c.patch  quickjs-atom.h.patch  quickjs-libc.c.patch  quickjs-opcode.h.patch  quickjs.c.patch  quickjs.h.patch
quickjs/upstream/quickjs/: VERSION  qjs.c  qjsc.c  quickjs-libc.c  quickjs.c  quickjs.h
rapidfuzz-cpp/: CMakeLists.txt
rxcpp/: CMakeLists.txt
rxcpp/patches/: 00-patch.applied
rxcpp/upstream/rxcpp/: rx-notification.hpp
sdefl/: CMakeLists.txt
sdefl/patches/: 00-patch.applied  01-patch.applied  02-patch.applied
sdefl/upstream/: sdefl.h  sinfl.h
valijson/: CMakeLists.txt
valijson/upstream/: valijson_nlohmann_bundled.hpp
wasmtime-cpp/: .gitignore  CMakeLists.txt
wasmtime-cpp/patches/: 00-patch.applied
wasmtime-cpp/upstream/: CMakeLists.txt
yoga/: CMakeLists.txt  README.md
yoga/patches/: 00-removed-test-and-changed-for-msvc.applied  01-supported-negative-gap.applied
yoga/upstream/: CMakeLists.txt
yoga/upstream/yoga/: CMakeLists.txt
yoga/upstream/yoga/style/: Style.h
zip/: CMakeLists.txt
zip/patches/: 00-patch.applied  01-patch.applied
zip/upstream/: CMakeLists.txt
zip/upstream/src/: zip.c
zlib/: CMakeLists.txt
zlib/patches/: 00-patch.applied  01-patch.applied
zlib/upstream/: CMakeLists.txt
zstd/: CMakeLists.txt
