cmake_minimum_required(VERSION 3.7)

project(vgg_contrib_libwebp)

option(WEBP_BUILD_ANIM_UTILS OFF)
option(WEBP_BUILD_CWEBP OFF)
option(WEBP_BUILD_DWEBP OFF)
option(WEBP_BUILD_EXTRAS OFF)
option(WEBP_BUILD_GIF2WEBP OFF)
option(WEBP_BUILD_IMG2WEBP OFF)
option(WEBP_BUILD_LIBWEBPMUX OFF)
option(WEBP_BUILD_VWEBP OFF)
option(WEBP_BUILD_WEBPINFO OFF)
option(WEBP_BUILD_WEBPMUX OFF)
add_subdirectory(upstream)

set(VGG_CONTRIB_LIBWEBP_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/upstream/src/ CACHE PATH "" FORCE)
set(VGG_CONTRIB_LIBWEBP_CONF_INCLUDE ${CMAKE_CURRENT_BINARY_DIR}/upstream/src/ CACHE PATH "" FORCE)
mark_as_advanced(VGG_CONTRIB_LIBWEBP_INCLUDE)
mark_as_advanced(VGG_CONTRIB_LIBWEBP_CONF_INCLUDE)
